# django-bot

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
bot/: models.py
bot/api/: serializers.py  urls.py  viewset.py
bot/migrations/: 0001_initial.py  0002_userchatsetting_chat_id_alter_usechathistory_id_and_more.py
bot/services/: telegram_chat_bot.py
common_users/: admin.py  constants.py  managers.py  models.py
common_users/api/: serializers.py  urls.py  viewset.py
common_users/management/commands/: telegram_bot.py
common_users/migrations/: 0001_initial.py  0002_alter_commonuser_managers.py  0003_faq_commonuser_telegram_user_id_commonuser_username_and_more.py  0004_remove_commonuser_birthday_remove_commonuser_email_and_more.py  0005_alter_commonuser_phone_commonuserpurchase.py  0006_commonuserpurchase_is_completed.py
common_users/services/: bot_tools.py  cart.py
core/models/: base.py  model_fields.py
django_bot/: settings.py  urls.py
orders/: admin.py  models.py
orders/migrations/: 0001_initial.py  0002_product_is_free.py  0003_product_expiration_time_product_lessor_and_more.py  0004_remove_product_expiration_time_and_more.py
project/: urls.py
project/settings/: __init__.py  base_settings.py
services/: telegram_chat_bot.py
